-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.7
-
ffc79d1da (dev)
Application hangs on calling QXYSeries::sizeBy and QXYSeries::colorBy methods for a large number of scatter points.
To demonstrate the problem, I have attached a sample code. This works fine right now, but try it by setting `num_of_points = 1000`, you should be able to see the hang.
My guess is that this happens due to repeatedly emitting `pointsConfigurationChanged` signal for each scatter point while setting it's configuration.
As a workaround, I blocked all signals of QScatterSeries -> made a call to sizeBy/colorBy method -> manually emitted `pointsConfigurationChanged` signal.
But then, application hangs on calling `QAbstractSeries::attachAxis` after a call to `QXYSeries::colorBy` method has already been made.
The reason here must be same, because `QAbstractSeries::attachAxis` internally calls `QXYSeries::colorBy` if some color_data is previously set to the scatter series.