Remove excessive signaling from sizeBy and colorBy

If sizeBy or colorBy changed more than one point configuration,
a signal about the change was triggered for each point. There is only
need for one signal after all points have been changed.

Fixes: QTBUG-116647
Pick-to: 6.6 6.5
Change-Id: Iec3ca822e9de4d594ef5327adf9f83a3da3906a2
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>